--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>com.csthink</groupId>
     <artifactId>spring-crm</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>SPRING-DOMAIN</module>
+        <module>SPRING-REPOSITORY</module>
+        <module>SPRING-SERVICE</module>
+        <module>SPRING-WEB</module>
+    </modules>
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+    </properties>
 
 </project>
