--- a/SPRING-WEB/src/main/webapp/WEB-INF/web.xml
+++ b/SPRING-WEB/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,42 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- 登陆验证码 Kaptcha -->
+    <servlet>
+        <servlet-name>Kaptcha</servlet-name>
+        <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
+        <!-- 图片宽 -->
+        <init-param>
+            <param-name>kaptcha.image.width</param-name>
+            <param-value>200</param-value>
+        </init-param>
+        <!-- 图片高 -->
+        <init-param>
+            <param-name>kaptcha.image.height</param-name>
+            <param-value>50</param-value>
+        </init-param>
+        <!--图片边框，合法值：no yes -->
+        <init-param>
+            <param-name>kaptcha.border</param-name>
+            <param-value>no</param-value>
+        </init-param>
+        <!-- 文字间隔 -->
+        <init-param>
+            <param-name>kaptcha.textproducer.char.space</param-name>
+            <param-value>4</param-value>
+        </init-param>
+        <!-- 干扰实现类 -->
+        <init-param>
+            <param-name>kaptcha.noise.impl</param-name>
+            <param-value>com.google.code.kaptcha.impl.NoNoise</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Kaptcha</servlet-name>
+        <!-- img src 指定格式 -->
+        <url-pattern>/kaptcha.jpg</url-pattern>
+    </servlet-mapping>
+
    <servlet>
        <servlet-name>DispatcherServlet</servlet-name>
        <servlet-class>com.csthink.crm.global.DispatcherServlet</servlet-class>
