--- a/SPRING-WEB/src/main/webapp/WEB-INF/web.xml
+++ b/SPRING-WEB/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,13 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <include-prelude>/WEB-INF/views/global.jsp</include-prelude>
+        </jsp-property-group>
+    </jsp-config>
+
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.csthink.crm.global.filter.EncodingFilter</filter-class>
@@ -17,17 +24,24 @@
         </init-param>
     </filter>
 
-    <jsp-config>
-        <jsp-property-group>
-            <url-pattern>*.jsp</url-pattern>
-            <include-prelude>/WEB-INF/views/global.jsp</include-prelude>
-        </jsp-property-group>
-    </jsp-config>
-
-
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>com.csthink.crm.global.filter.LoginFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>*.jsp</url-pattern>
     </filter-mapping>
 
     <!-- 登陆验证码 Kaptcha -->
